--- a/package.json
+++ b/package.json
@@ -18,10 +18,7 @@
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./test/jest-e2e.json",
-    "migrate": "knex migrate:latest --env production --debug",
-    "rollback": "knex migrate:rollback --all --env production",
-    "seed:run": "knex seed:run"
+    "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
     "@nestjs-modules/mailer": "^1.9.1",
@@ -30,14 +27,14 @@
     "@nestjs/mapped-types": "*",
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/swagger": "^7.1.11",
+    "@nestjs/typeorm": "^10.0.0",
     "bcrypt": "^5.0.1",
     "datauri": "4.1.0",
-    "knex": "^2.5.1",
-    "nestjs-knex": "^2.0.0",
     "nodemailer": "^6.9.5",
     "pino-http": "^8.4.0",
     "reflect-metadata": "^0.1.13",
-    "rxjs": "^7.8.1"
+    "rxjs": "^7.8.1",
+    "typeorm": "^0.3.17"
   },
   "devDependencies": {
     "@faker-js/faker": "^8.1.0",
